--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -1,13 +1,46 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>PointOfSale</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Montserrat:600,7">
+  <style>
+    .rounded-lg {
+      border-radius: 1rem !important;
+    }
+
+    .text-small {
+      font-size: 0.9rem !important;
+    }
+
+    .custom-separator {
+      width: 5rem;
+      height: 6px;
+      border-radius: 1rem;
+    }
+
+    .text-uppercase {
+      letter-spacing: 0.2em;
+    }
+
+    body {
+      background: #00B4DB;
+      background: -webkit-linear-gradient(to right, #0083B0, #00B4DB);
+      background: linear-gradient(to right, #0083B0, #00B4DB);
+      color: #514B64;
+      min-height: 100vh;
+    }
+  </style>
 </head>
+
+<meta charset="utf-8">
+<title>Point of Sale System</title>
+<base href="/">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
